--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.11.1",
+    "axios": "^1.2.2",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
